--- a/Garson/Base.lproj/Main_iPhone.storyboard
+++ b/Garson/Base.lproj/Main_iPhone.storyboard
@@ -85,7 +85,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.49803921568627452" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Check In To Table">
+                                <state key="normal" title="Check In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -120,13 +120,14 @@
                     <connections>
                         <outlet property="actionButton" destination="I01-kg-m30" id="vaI-MV-hxA"/>
                         <outlet property="seatingButton" destination="Wi6-LV-C9e" id="n0F-hy-Tk0"/>
+                        <segue destination="O1d-UT-wJ0" kind="push" identifier="UserOrders" id="AKY-AW-lJf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh2-T1-AhA" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1167" y="552"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Table View Controller - Order-->
         <scene sceneID="2VT-PG-txw">
             <objects>
                 <tableViewController id="O1d-UT-wJ0" sceneMemberID="viewController">
@@ -136,7 +137,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="RUe-ix-VtQ">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RUe-ix-VtQ" id="Oov-Cg-UNM">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -149,6 +150,7 @@
                             <outlet property="delegate" destination="O1d-UT-wJ0" id="MVf-qd-PAx"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Order" id="euf-bg-wCq"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HXs-54-8xE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
