Screens for displaying menu sections and menu items.

--- a/Garson/CVNOrderSummaryView.xib
+++ b/Garson/CVNOrderSummaryView.xib
@@ -93,6 +93,9 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="addToOrder:" destination="RPF-E1-tQL" eventType="touchUpInside" id="xg7-jE-paB"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IVm-wS-YUP">
                     <rect key="frame" x="180" y="147" width="125" height="38"/>
